코드 최적화 (java 17)