@@ -4,6 +4,7 @@ import com.spark.toy.domain.Customer;
 import com.spark.toy.dto.base.UserBaseDto;
 import lombok.AllArgsConstructor;
 import lombok.Data;
+import lombok.EqualsAndHashCode;
 import lombok.NoArgsConstructor;
 
 import java.time.LocalDate;
@@ -12,6 +13,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
+@EqualsAndHashCode(callSuper = false)
 @Data
 @AllArgsConstructor
 @NoArgsConstructor
@@ -30,7 +32,7 @@ public class CustomerDto extends UserBaseDto {
         customerDto.setPhoneNumber(customer.getPhoneNumber());
         customerDto.setPassword(customer.getPassword());
         customerDto.setBirth(customer.getBirth().format(DateTimeFormatter.ofPattern("yyyy-MM-dd")));
-        customerDto.setSubscriptions(customer.getSubscriptions().stream().map(sub -> SubscriptionDto.toDto(sub)).collect(Collectors.toList()));
+        customerDto.setSubscriptions(customer.getSubscriptions().stream().map(SubscriptionDto::toDto).toList());
         return customerDto;
     }
 
@@ -43,7 +45,7 @@ public class CustomerDto extends UserBaseDto {
         customer.setBirth(LocalDate.parse(customerDto.getBirth(), DateTimeFormatter.ofPattern("yyyy-MM-dd")));
         customer.setPhoneNumber(customerDto.getPhoneNumber());
         customer.setPassword(customerDto.getPassword());
-        customer.setSubscriptions(customerDto.getSubscriptions().stream().map(sub -> SubscriptionDto.toEntity(sub)).collect(Collectors.toList()));
+        customer.setSubscriptions(customerDto.getSubscriptions().stream().map(SubscriptionDto::toEntity).collect(Collectors.toList()));
 
         return customer;
     }
